--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Tame a Wild Camera: In-the-Wild Monocular Camera Calibration</h1>
+            <h1 class="title is-1 publication-title">Tame a Wild Camera:<br /> In-the-Wild Monocular Camera Calibration</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Shengjie Zhu</a><sup>*</sup>,</span>
+                <a href="https://shngjz.github.io/" target="_blank">Shengjie Zhu</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Abhinav Kumar</a><sup>*</sup>,</span>
+                  <a href="https://sites.google.com/view/abhinavkumar" target="_blank">Abhinav Kumar</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Masa Hu</a><sup>*</sup>,</span>
+                    <a href="https://scholar.google.com/citations?user=Xs-NkFMAAAAJ&hl=en" target="_blank">Masa Hu</a>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Xiaoming Liu</a>
+                      <a href="https://www.cse.msu.edu/~liuxm/index2.html" target="_blank">Xiaoming Liu</a>
                   </span>
                   </div>
 
