add teaser video

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/wild_camera_icon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -104,18 +104,15 @@
 
 <!-- Teaser video-->
 <section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="60%">
-        <!-- Your video here -->
-        <source src="static/videos/teaser_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        The work presents a 4 DoF Camera Calibraiton technique for in-the-wild monocular images.
-        We systematically present the relationship between camera calibration and monocular 3D priors.
-        Beyond calibration, we demonstrate diver downstream applications, e.g., detection and restoration of image resize and crop.
-      </h2>
+  <div class="columns is-centered">
+    <div class="container is-max-desktop">
+      <div class="hero-body">
+        <video poster="" id="tree" autoplay controls muted loop height="60%">
+          <!-- Your video here -->
+          <source src="static/videos/teaser_video.mp4"
+          type="video/mp4">
+        </video>
+      </div>
     </div>
   </div>
 </section>
