--- a/index.html
+++ b/index.html
@@ -104,14 +104,13 @@
 
 <!-- Teaser video-->
 <section class="hero teaser">
-  <div class="columns is-centered">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <video poster="" id="tree" autoplay controls muted loop height="60%">
-          <!-- Your video here -->
-          <source src="static/videos/teaser_video.mp4"
-          type="video/mp4">
-        </video>
+        <div class="columns is-centered">
+          <video poster="" id="tree" autoplay controls muted loop height="60%">
+            <source src="static/videos/teaser_video.mp4"
+            type="video/mp4">
+          </video>
       </div>
     </div>
   </div>
@@ -122,7 +121,7 @@
 <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
+      <div class="column is-full">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
