add teaser video

--- a/index.html
+++ b/index.html
@@ -136,15 +136,17 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 <!-- End paper abstract -->
 
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-          @InProceedings{sparf2023,
-          title={SPARF: Neural Radiance Fields from Sparse and Noisy Poses},
-          author = {Truong, Prune and Rakotosaona, Marie-Julie and Manhardt, Fabian and Tombari, Federico},
-          publisher = {{IEEE/CVF} Conference on Computer Vision and Pattern Recognition, {CVPR}},
-          year = {2023}</code></pre>
+          @inproceedings{
+          zhu2023tame,
+          title={Tame a Wild Camera: In-the-Wild Monocular Camera Calibration},
+          author={Shengjie Zhu and Abhinav Kumar and Masa Hu and Xiaoming Liu},
+          booktitle={NeuRIPS},
+          year={2023}
+          }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
