--- a/index.html
+++ b/index.html
@@ -107,11 +107,7 @@
     <div class="container is-max-desktop">
       <div class="hero-body">
         <div class="columns is-centered">
-          <video poster="" id="tree" autoplay controls muted loop height="30%">
-            <source src="static/videos/teaser_video.mp4"
-            type="video/mp4">
-          </video>
-          <video poster="" id="tree" autoplay controls muted loop height="30%">
+          <video poster="" id="tree" autoplay controls muted loop height="60%">
             <source src="static/videos/teaser_video.mp4"
             type="video/mp4">
           </video>
@@ -140,6 +136,41 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 <!-- End paper abstract -->
 
 
+
+<!-- Video carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3">Another Carousel</h2>
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-video1">
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
+            <!-- Your video file here -->
+            <source src="static/videos/dolly_zoom1.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video2">
+          <video poster="" id="video2" autoplay controls muted loop height="100%">
+            <!-- Your video file here -->
+            <source src="static/videos/dolly_zoom2.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-video3">
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+            <!-- Your video file here -->
+            <source src="static/videos/dolly_zoom3.mp4"
+            type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End video carousel -->
+
+
 <!--<section class="section">-->
 <!--  <div class="container is-max-desktop">-->
 
@@ -148,38 +179,22 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 <!--      &lt;!&ndash; Visual Effects. &ndash;&gt;-->
 <!--      <div class="column">-->
 <!--        <div class="content">-->
-<!--          <h2 class="title is-3">Visual Effects</h2>-->
-<!--          <p>-->
-<!--            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect-->
-<!--            would be impossible without nerfies since it would require going through a wall.-->
-<!--          </p>-->
-<!--          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">-->
-<!--            <source src="./static/videos/dollyzoom-stacked.mp4"-->
+<!--          <h2 class="title is-3">Dolly Zoom Videos</h2>-->
+<!--          <video id="dollyzoom1" autoplay controls muted loop playsinline height="100%">-->
+<!--            <source src="./static/videos/dolly_zoom1.mp4"-->
+<!--                    type="video/mp4">-->
+<!--          </video>-->
+<!--          <video id="dollyzoom2" autoplay controls muted loop playsinline height="100%">-->
+<!--            <source src="./static/videos/dolly_zoom2.mp4"-->
+<!--                    type="video/mp4">-->
+<!--          </video>-->
+<!--          <video id="dollyzoom3" autoplay controls muted loop playsinline height="100%">-->
+<!--            <source src="./static/videos/dolly_zoom3.mp4"-->
 <!--                    type="video/mp4">-->
 <!--          </video>-->
 <!--        </div>-->
 <!--      </div>-->
 <!--      &lt;!&ndash;/ Visual Effects. &ndash;&gt;-->
-
-<!--      &lt;!&ndash; Matting. &ndash;&gt;-->
-<!--      <div class="column">-->
-<!--        <h2 class="title is-3">Matting</h2>-->
-<!--        <div class="columns is-centered">-->
-<!--          <div class="column content">-->
-<!--            <p>-->
-<!--              As a byproduct of our method, we can also solve the matting problem by ignoring-->
-<!--              samples that fall outside of a bounding box during rendering.-->
-<!--            </p>-->
-<!--            <video id="matting-video" controls playsinline height="100%">-->
-<!--              <source src="./static/videos/matting.mp4"-->
-<!--                      type="video/mp4">-->
-<!--            </video>-->
-<!--          </div>-->
-
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--    &lt;!&ndash;/ Matting. &ndash;&gt;-->
 
 <!--  </div>-->
 <!--</section>-->
