--- a/index.html
+++ b/index.html
@@ -141,24 +141,26 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <div class="column has-text-centered">
+        <h2 class="title is-3">In-the-Wild Calibration on Dolly Zoom Videos</h2>
+      </div>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
+          <video poster="" id="video1" autoplay controls muted loop height="60%">
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
+          <video poster="" id="video2" autoplay controls muted loop height="60%">
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
+          <video poster="" id="video3" autoplay controls muted loop height="60%">\
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom3.mp4"
             type="video/mp4">
