add teaser video

--- a/index.html
+++ b/index.html
@@ -142,25 +142,25 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
   <div class="hero-body">
     <div class="container">
       <div class="column has-text-centered">
-        <h2 class="title is-3">In-the-Wild Calibration on Dolly Zoom Videos</h2>
+        <h2 class="title is-4">In-the-Wild Calibration on Dolly Zoom Videos</h2>
       </div>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="60%">
+          <video poster="" id="video1" autoplay controls muted loop height="30%">
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="60%">
+          <video poster="" id="video2" autoplay controls muted loop height="30%">
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom2.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="60%">\
+          <video poster="" id="video3" autoplay controls muted loop height="30%">\
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom3.mp4"
             type="video/mp4">
@@ -173,33 +173,21 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 <!-- End video carousel -->
 
 
-<!--<section class="section">-->
-<!--  <div class="container is-max-desktop">-->
-
-<!--    <div class="columns is-centered">-->
-
-<!--      &lt;!&ndash; Visual Effects. &ndash;&gt;-->
-<!--      <div class="column">-->
-<!--        <div class="content">-->
-<!--          <h2 class="title is-3">Dolly Zoom Videos</h2>-->
-<!--          <video id="dollyzoom1" autoplay controls muted loop playsinline height="100%">-->
-<!--            <source src="./static/videos/dolly_zoom1.mp4"-->
-<!--                    type="video/mp4">-->
-<!--          </video>-->
-<!--          <video id="dollyzoom2" autoplay controls muted loop playsinline height="100%">-->
-<!--            <source src="./static/videos/dolly_zoom2.mp4"-->
-<!--                    type="video/mp4">-->
-<!--          </video>-->
-<!--          <video id="dollyzoom3" autoplay controls muted loop playsinline height="100%">-->
-<!--            <source src="./static/videos/dolly_zoom3.mp4"-->
-<!--                    type="video/mp4">-->
-<!--          </video>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      &lt;!&ndash;/ Visual Effects. &ndash;&gt;-->
-
-<!--  </div>-->
-<!--</section>-->
+<section class="section">
+    <div class="columns is-centered">
+      <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <h2 class="title is-4">Augment Intrinsic for In-the-Wild 3D Monocular Object Detection</h2>
+          <video id="dollyzoom1" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/mono3d_detect.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+      </div>
+</section>
 
 <!--BibTex citation -->
 <section class="section" id="BibTeX">
