add teaser video

--- a/index.html
+++ b/index.html
@@ -175,17 +175,28 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 
 <section class="section">
     <div class="columns is-centered">
-      <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
+          <div class="column has-text-centered">
           <h2 class="title is-4">Augment Intrinsic for In-the-Wild 3D Monocular Object Detection</h2>
-          <video id="dollyzoom1" autoplay controls muted loop playsinline height="30%">
+          </div>
+          <video id="mono3d_detect" autoplay controls muted loop playsinline height="30%">
             <source src="./static/videos/mono3d_detect.mp4"
                     type="video/mp4">
           </video>
         </div>
       </div>
-      <!--/ Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <div class="column has-text-centered">
+          <h2 class="title is-4">Image Crop and Resize Detection and Restoration</h2>
+          </div>
+          <video id="image_crop_resize" autoplay controls muted loop playsinline height="30%">
+            <source src="./static/videos/image_crop_resize.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
       </div>
 </section>
 
