--- a/index.html
+++ b/index.html
@@ -178,27 +178,34 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
       <div class="column">
         <div class="content">
           <div class="column has-text-centered">
-          <h2 class="title is-4">Augment Intrinsic for In-the-Wild 3D Monocular Object Detection</h2>
+          <h2 class="title is-4">Augment Intrinsic for In-the-Wild Monocular 3D Object Detection</h2>
           </div>
-          <video id="mono3d_detect" autoplay controls muted loop playsinline height="500">
+          <video id="mono3d_detect" autoplay controls muted loop playsinline height="200">
             <source src="./static/videos/mono3d_detect.mp4"
                     type="video/mp4">
           </video>
         </div>
       </div>
-<!--      <div class="column">-->
-<!--        <div class="content">-->
-<!--          <div class="column has-text-centered">-->
-<!--          <h2 class="title is-4">Image Crop and Resize Detection and Restoration</h2>-->
-<!--          </div>-->
-<!--          <video id="image_crop_resize" autoplay controls muted loop playsinline height="500">-->
-<!--            <source src="./static/videos/image_crop_resize.mp4"-->
-<!--                    type="video/mp4">-->
-<!--          </video>-->
-<!--        </div>-->
-<!--      </div>-->
       </div>
 </section>
+
+
+<section class="section">
+    <div class="columns is-centered">
+      <div class="column">
+        <div class="content">
+          <div class="column has-text-centered">
+          <h2 class="title is-4">Image Crop and Resize Detection and Restoration</h2>
+          </div>
+          <video id="image_crop_resize" autoplay controls muted loop playsinline height="200">
+            <source src="./static/videos/image_crop_resize.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      </div>
+</section>
+
 
 <!--BibTex citation -->
 <section class="section" id="BibTeX">
