--- a/index.html
+++ b/index.html
@@ -146,23 +146,23 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
       </div>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="30%">
+          <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
             <source src="static/videos/dolly_zoom1.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="30%">
+          <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/dolly_zoom2.mp4"
+            <source src="static/videos/dolly_zoom3.mp4"
             type="video/mp4">
           </video>
         </div>
         <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="30%">\
+          <video poster="" id="video3" autoplay controls muted loop height="100%">\
             <!-- Your video file here -->
-            <source src="static/videos/dolly_zoom3.mp4"
+            <source src="static/videos/dolly_zoom2.mp4"
             type="video/mp4">
           </video>
         </div>
@@ -180,7 +180,7 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
           <div class="column has-text-centered">
           <h2 class="title is-4">Augment Intrinsic for In-the-Wild Monocular 3D Object Detection</h2>
           </div>
-          <video id="mono3d_detect" autoplay controls muted loop playsinline height="200">
+          <video id="mono3d_detect" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/mono3d_detect.mp4"
                     type="video/mp4">
           </video>
@@ -191,19 +191,17 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 
 
 <section class="section">
-    <div class="columns is-centered">
-      <div class="column">
         <div class="content">
           <div class="column has-text-centered">
           <h2 class="title is-4">Image Crop and Resize Detection and Restoration</h2>
           </div>
-          <video id="image_crop_resize" autoplay controls muted loop playsinline height="200">
+          <div class="columns is-centered">
+          <video id="image_crop_resize" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/image_crop_resize.mp4"
                     type="video/mp4">
           </video>
+          </div>
         </div>
-      </div>
-      </div>
 </section>
 
 
