--- a/index.html
+++ b/index.html
@@ -198,12 +198,23 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
           <div class="columns is-centered">
           <video id="image_crop_resize" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/image_crop_resize.mp4"
-                    type="video/mp4">
+                    type="video/mp4"
+                    className="h-[300px] w-auto"
+            >
           </video>
           </div>
         </div>
 </section>
 
+<!-- <section class="section">-->
+<!--        <div class="content">-->
+<!--          <div class="column has-text-centered">-->
+<!--          <h2 class="title is-4">Broader Impact - Press Image Crop / Resize Detection and Restoration</h2>-->
+<!--          </div>-->
+<!--          <div class="columns is-centered">-->
+<!--          </div>-->
+<!--        </div>-->
+<!--</section>-->
 
 <!--BibTex citation -->
 <section class="section" id="BibTeX">
