--- a/index.html
+++ b/index.html
@@ -206,15 +206,14 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
         </div>
 </section>
 
-<!-- <section class="section">-->
-<!--        <div class="content">-->
-<!--          <div class="column has-text-centered">-->
-<!--          <h2 class="title is-4">Broader Impact - Press Image Crop / Resize Detection and Restoration</h2>-->
-<!--          </div>-->
-<!--          <div class="columns is-centered">-->
-<!--          </div>-->
-<!--        </div>-->
-<!--</section>-->
+ <section class="section">
+        <div class="content">
+          <div class="column has-text-centered">
+          <h2 class="title is-4">Broader Impact - Press Image Crop / Resize Detection and Restoration</h2>
+          <img src="static/images/broader_impact.png" width=100% class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+</section>
 
 <!--BibTex citation -->
 <section class="section" id="BibTeX">
