--- a/index.html
+++ b/index.html
@@ -135,7 +135,14 @@ Freedom (DoF) intrinsic parameters. First, we show intrinsic is determined by th
 </section>
 <!-- End paper abstract -->
 
-
+ <section class="section">
+        <div class="content">
+          <div class="column has-text-centered">
+          <h2 class="title is-4">Poster Introduction</h2>
+          <img src="static/images/tame_a_wild_camera_poster.png" width=100% class="img-fluid" alt="Responsive image">
+          </div>
+        </div>
+</section>
 
 <!-- Video carousel -->
 <section class="hero is-small">
